redefined work_dir

--- a/kaggle plant classification.ipynb
+++ b/kaggle plant classification.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "work_dir = os.getcwd() + '/kaggle_plants/'\n",
+    "work_dir = os.getcwd() \n",
     "train_dir = work_dir + 'train/'\n",
     "test_dir = work_dir + 'test/'\n",
     "model_path = work_dir + 'model/'"
